--- a/static/index.html
+++ b/static/index.html
@@ -14,8 +14,8 @@
             <button id="refresh-btn" class="button">Refresh</button>
         </div>
         <h2>Files:</h2>
-        <ul class="file-list">
-            {file_list}
+        <ul class="file-list" id="file-list">
+            <!-- Files will be populated by JavaScript -->
         </ul>
     </div>
     <script src="/static/scripts.js"></script>
