logout and config

--- a/static/upload.html
+++ b/static/upload.html
@@ -29,4 +29,7 @@
 
     <script src="/static/scripts.js"></script>
 </body>
+	<footer class="footer">
+    <p>&copy; 2025 Serifpersia | <a href="https://github.com/serifpersia" target="_blank">GitHub</a></p>
+</footer>
 </html>
