--- a/static/index.html
+++ b/static/index.html
@@ -9,15 +9,20 @@
 <body>
     <div class="container">
         <h1>File Storage</h1>
-        <div class="controls">
-            <a href="/upload" class="button">Upload New File</a>
-            <button id="refresh-btn" class="button">Refresh</button>
-        </div>
+		<div class="controls">
+			<a href="/upload" class="button">Upload New File</a>
+			<button id="refresh-btn" class="button">Refresh</button>
+			<button id="logout-btn" class="button">Logout</button>
+		</div>
         <h2>Files:</h2>
         <ul class="file-list" id="file-list">
             <!-- Files will be populated by JavaScript -->
         </ul>
     </div>
+
     <script src="/static/scripts.js"></script>
 </body>
+	<footer class="footer">
+		<p>&copy; 2025 Serifpersia | <a href="https://github.com/serifpersia" target="_blank">GitHub</a></p>
+	</footer>
 </html>
