--- a/static/upload.html
+++ b/static/upload.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload File</title>
     <link rel="stylesheet" href="/static/styles.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <div class="container">
@@ -29,7 +31,7 @@
 
     <script src="/static/scripts.js"></script>
 </body>
-	<footer class="footer">
-    <p>&copy; 2025 Serifpersia | <a href="https://github.com/serifpersia" target="_blank">GitHub</a></p>
-</footer>
+    <footer>
+        © 2025 serifpersia. <a href="https://github.com/serifpersia" class="github-link"><i class="fab fa-github"></i> GitHub</a>
+    </footer>
 </html>
